--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,6 @@ include LICENSE.txt
 include MANIFEST.in
 include README.rst
 include systemd/*
+include tests/conftest.py
+include tests/pytest.ini
+include tests/test_*.py
