Implemented reading the configuration file.

--- a/etc/auto-patch.cfg
+++ b/etc/auto-patch.cfg
@@ -1,1 +1,30 @@
 # Configuration file for auto-patch
+
+# The configuration values below are the default values commented out
+# by a leading '!'.
+
+[mailreport]
+# A mail report may be sent if patches are available or have been
+# installed.  This is controlled by the /report/ flag, default is on.
+# The sender address, the recipient address, and the subject of this
+# mail is set in /mailfrom/, /mailto/, and /subject/ respectively.
+# The host to submit the mail via SMTP is set in /mailhost/.  The
+# latter may optionally contain a port number, separated by a colon
+# ':' from the host name.  The default values for /hostname/ and
+# /user/ are dynamically set at run time.  These two variables are
+# not used directly, but their values are interpolated into other
+# configuration variables by default.
+!report = on
+!hostname = <the fully qualified domain name of the local host>
+!user = <the login name of the user running the script, most likely root>
+!mailfrom = %(user)s@%(hostname)s
+!mailto = root@%(hostname)s
+!subject = auto-patch %(hostname)s
+!mailhost = localhost
+
+[retry]
+# Control the behavior if the ZYPP library is locked by another
+# process: retry /max/ times before giving up and sleep for /wait/
+# seconds between each try.
+!max = 30
+!wait = 60
