Add configuration variables for logging levels.

--- a/etc/auto-patch.cfg
+++ b/etc/auto-patch.cfg
@@ -28,3 +28,16 @@
 # seconds between each try.
 !max = 30
 !wait = 60
+
+[logging]
+# Logging configuration.  The /journal_level/, /stderr_level/, and
+# /report_level/ variables set the threshold for logging to the
+# systemd journal, to standard error, and for additional diagnostic
+# messages in the mail report respectively.  Logging to standard error
+# is only active if it is a tty, which generally means that the script
+# is run interactively.  Note that the mail report in any case
+# contains the standard output of the zypper commands which is largely
+# redundant with messages at level INFO or below.
+!journal_level = INFO
+!stderr_level = DEBUG
+!report_level = WARNING
