--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE.txt
 include MANIFEST.in
 include README.rst
 include _meta.py
+include etc/auto-patch.cfg
 include systemd/*
 include tests/conftest.py
 include tests/pytest.ini
