Retry also in case of failure to refresh a repository

--- a/etc/auto-patch.cfg
+++ b/etc/auto-patch.cfg
@@ -24,8 +24,9 @@
 
 [retry]
 # Control the behavior if the ZYPP library is locked by another
-# process: retry /max/ times before giving up and sleep for /wait/
-# seconds between each try.
+# process or in case of failure to refresh a repository (possibly due
+# to network error): retry /max/ times before giving up and sleep for
+# /wait/ seconds between each try.
 !max = 30
 !wait = 60
 
