--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -6,14 +6,17 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - '3.5'
-          - '3.6'
           - '3.7'
           - '3.8'
           - '3.9'
           - '3.10'
-          - '3.11.0-beta - 3.11.0'
+          - '3.11'
         os: [ubuntu-latest]
+        include:
+          - python-version: '3.5'
+            os: ubuntu-20.04
+          - python-version: '3.6'
+            os: ubuntu-20.04
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
