Update GH actions test setup, tested with Python 3.12.0b2

--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,4 +1,5 @@
 distutils-pytest
 pytest >=3.0.0
 setuptools_scm
-systemd-python
+systemd-python <235 ; python_version == '3.5'
+systemd-python ; python_version > '3.5'
