Drop support for Python 3.5.  Note that there are no known issues with this version, but it doesn't seem worth the effort to continue testing with that old version.

--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,5 +1,4 @@
 distutils-pytest
 pytest >=3.0.0
 setuptools_scm
-systemd-python <235 ; python_version == '3.5'
-systemd-python ; python_version > '3.5'
+systemd-python
