--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -16,6 +16,7 @@ jobs:
           - '3.10'
           - '3.11'
           - '3.12'
+          - '3.13.0-beta - 3.13.0'
         os: [ubuntu-latest]
         include:
           - python-version: '3.6'
